# SwitchBOX

./: .gitignore  CMakeLists.txt  README.md
.SwitchBOX-Data/Langs/en-US/: switchbox.json
.SwitchBOX-Data/Langs/zh-Hans/: hints.json  switchbox.json
app/: CMakeLists.txt
app/include/switchbox/app/: application.hpp  config_missing_activity.hpp  header_status_hint.hpp  history_activity.hpp  home_activity.hpp  iptv_browser_activity.hpp  placeholder_activity.hpp  player_activity.hpp  player_video_surface.hpp  settings_activity.hpp  smb_browser_activity.hpp  startup_context.hpp  webdav_browser_activity.hpp
app/source/: application.cpp  config_missing_activity.cpp  header_status_hint.cpp  history_activity.cpp  home_activity.cpp  iptv_browser_activity.cpp  main_desktop.cpp  main_switch.cpp  placeholder_activity.cpp  player_activity.cpp  player_video_surface.cpp  settings_activity.cpp  smb_browser_activity.cpp  webdav_browser_activity.cpp
cmake/toolchains/: switch.cmake
core/: CMakeLists.txt
core/include/switchbox/core/: app_config.hpp  build_info.hpp  iptv_playlist.hpp  language.hpp  playback_history.hpp  playback_launcher.hpp  playback_target.hpp  smb2_mount_fs.hpp  smb_browser.hpp  switch_mpv_player.hpp  update_check.hpp  webdav_browser.hpp
core/source/: app_config.cpp  build_info.cpp  iptv_playlist.cpp  language.cpp  playback_history.cpp  playback_launcher.cpp  playback_target.cpp  smb2_mount_fs.cpp  smb_browser.cpp  switch_mpv_player.cpp  update_check.cpp  webdav_browser.cpp
langs/en-US/: switchbox.json
langs/zh-Hans/: switchbox.json
packaging/switch/: switchbox.ini
platform/: CMakeLists.txt
platform/desktop/: CMakeLists.txt
platform/desktop/include/switchbox/platform/desktop/: platform_desktop.hpp
platform/desktop/source/: platform_desktop.cpp
platform/switch/: CMakeLists.txt
platform/switch/include/switchbox/platform/switch/: platform_switch.hpp
platform/switch/source/: platform_switch.cpp
resources/i18n/en-US/: switchbox.json
resources/i18n/zh-Hans/: scroll.json  switchbox.json
resources/xml/tabs/: scroll_test.xml  settings.xml
resources/xml/views/: pokemon.xml
tools/: build-desktop-vs.cmd  build-switch-package.cmd  iptv-dev-test.m3u  iptv-selfhost-template.m3u
